res/examples/invalid/if_expression_block_returning_bool_as_cond.eg
if { true } { 123 } else { 456 };

// out: SyntaxError: unexpected "{"; expected: ["\"[\"", "\"(\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "identifier", "string", "number"]
// out: SyntaxError: unexpected "{"; expected: ["\";\""]
// out: SyntaxError: unexpected "else"; expected: ["\";\""]